--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
+<link rel="stylesheet" type="text/css" href="estilo.css" />
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
