--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="./~UO236856/index.html">Datos Personales</a>
+      <a href="/~UO236856">Datos Personales</a>
       <a href="/~UO236856/SEW/p0.html">SEW</a>
       <a href="/~UO236856/SEW/p0.html">Aficiones</a>
     </nav>
