Main style and Structure updated

--- a/SEW/P0/index.html
+++ b/SEW/P0/index.html
@@ -1,6 +1,6 @@
 
 <html lang="es">
-<link rel="stylesheet" type="text/css" href="/~UO236856/estilo.css" />
+<link rel="stylesheet" type="text/css" href="estilo.css" />
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
