--- a/SEW/P1/p1.html
+++ b/SEW/P1/p1.html
@@ -5,7 +5,7 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8"/>
     <title>Canción de hielo y fuego</title>
-    <link rel="stylesheet" type="text/css" href="/~UO236856//estilo.css" />
+    <link rel="stylesheet" type="text/css" href="/estilo.css" />
 </head>
 
 <body>
