--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 
-
+<!doctype html>
 <html lang="es">
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
     <title>Mi Página Web</title>
-
     <link rel="stylesheet" type="text/css" href="estilo.css" />
+    <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css"/>
 </head>
 
 <body>
   <header>
     <nav>
-      <a href="/~UO236856">Datos Personales</a>
-      <a href="/~UO236856/SEW/p0.html">SEW</a>
+      <a href="/~UO236856">Inicio</a>
       <a href="/~UO236856/SEW/p0.html">Aficiones</a>
+      <a href="/~UO236856/SEW/p0.html">Prácticas</a>
     </nav>
   </header>
     <!-- Datos con el contenidos que aparece en el navegador -->
