--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
-    <title>Mi Página Web</title>
+    <title>GFC: Inicio</title>
     <link rel="stylesheet" type="text/css" href="estilo.css" />
     <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css"/>
 </head>
@@ -12,9 +12,9 @@
 <body>
   <header>
     <nav>
-      <a href="/~UO236856">Inicio</a>
-      <a href="/~UO236856/SEW/p0.html">Aficiones</a>
-      <a href="/~UO236856/SEW/p0.html">Prácticas</a>
+      <a class="current" href="/~UO236856">Inicio</a>
+      <a href="/~UO236856/aficiones.html">Aficiones</a>
+      <a href="/~UO236856/practicas.html">Prácticas</a>
     </nav>
   </header>
     <!-- Datos con el contenidos que aparece en el navegador -->
@@ -37,13 +37,6 @@
 
 
         <footer>
-      <a href="https://validator.w3.org/check?uri=referer"><img
-          src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-          alt="HTML5 Válido" title="HTML5 Válido" height="64" width="63" /></a>
-
-        <a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-       <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-          alt="Valid CSS!" height="31" width="88" /></a>
 
     </footer>
 
