--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Guillermo Facundo Colunga</h2>
         <p>UO236856@uniovi.es</p>
     </div>
-    <div>
+<!--    <div>
       <ul>
           <li><a href="/~UO236856/SEW/p0.html">Práctica 0</a></li>
           <li><a href="/~UO236856/SEW/p1.html">Práctica 1</a></li>
@@ -33,7 +33,7 @@
           <li><a href="/~UO236856/SEW/p1.html">Práctica 5</a></li>
       </ul>
     </div>
-
+-->
 
 
         <footer>
