--- a/aficiones.html
+++ b/aficiones.html
@@ -17,6 +17,20 @@
     </nav>
   </header>
     <!-- Datos con el contenidos que aparece en el navegador -->
-
+    <ul class="aficiones">
+      <li class="aficion" id="1">
+        <p>Montaña</p>
+      </li>
+      <li class="aficion" id="2">
+        <p>Esquí</p>
+      </li>
+      <li class="aficion" id="3">
+        <p>Correr</p>
+      </li>
+    </li>
+    <li class="aficion" id="4">
+      <p>Nadar</p>
+    </li>
+    </ul>
 </body>
 </html>
