--- a/aficiones.html
+++ b/aficiones.html
@@ -19,17 +19,21 @@
     <!-- Datos con el contenidos que aparece en el navegador -->
     <ul class="aficiones">
       <li class="aficion" id="1">
-        <p>Montaña</p>
+        <p>Festivales</p>
+        <p>Todos los veranos acudo al Arenal Music Festival, el ambiente y la música forman parte de mi vida.</p>
       </li>
       <li class="aficion" id="2">
         <p>Esquí</p>
+        <p>Es imposible que pase un temporada fuera de alguna estación de esquí. Y por eso me saqué el título de rescatista de montaña.</p>
       </li>
       <li class="aficion" id="3">
         <p>Correr</p>
+        <p>De alguna manera hay que sentirse libre y desconectar de las cosas.</p>
       </li>
     </li>
     <li class="aficion" id="4">
       <p>Nadar</p>
+      <p>Sin duda mi mayor afición, me pasaría el día en el agua. Siempre que el entrenador esté de humor.</p>
     </li>
     </ul>
 </body>
