--- a/practicas.html
+++ b/practicas.html
@@ -18,12 +18,12 @@
   </header>
     <!-- Datos con el contenidos que aparece en el navegador -->
     <nav class = "submenu">
-      <a href="/~UO236856">P1</a>
-      <a href="/~UO236856/aficiones.html">P2</a>
-      <a href="/~UO236856/practicas.html">P3</a>
-      <a href="/~UO236856/practicas.html">P4</a>
-      <a href="/~UO236856/practicas.html">P5</a>
-      <a href="/~UO236856/practicas.html">P6</a>
+      <a class = "cat" href="/~UO236856/SEW/P0/p0.html">P0</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P1/p1.html">P1</a>
+      <a class = "xml-cat" href="/~UO236856/error-practica.html">P2</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P3/p3.html">P3</a>
+      <a class = "xml-cat" href="/~UO236856/error-practica.html">P4</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P5/p5.html">P5</a>
     </nav>
 </body>
 </html>
