--- a/SEW/P3/libros.html
+++ b/SEW/P3/libros.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Refresh" content="300">
 
     <title>Canción de hielo y fuego</title>
-    <link rel="stylesheet" type="text/css" href="/~UO236856//estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 
 <body>
@@ -19,14 +19,14 @@
     </header>
     <div>
       <nav>
-        <a href="./p3.html">Inicio</a>
-        <a href="./libros.html">Libros</a>
-        <a href="./tematica.html">Temática</a>
-        <a href="./resumen.html">Resumen</a>
-        <a href="./personajes.html">Personajes</a>
-        <a href="./fuentes.html">Fuentes</a>
-        <a href="./adaptaciones.html">Adaptaciones</a>
-        <a href="./mas-info.html">Más Info</a>
+        <a href="p3.html">Inicio</a>
+        <a href="libros.html">Libros</a>
+        <a href="tematica.html">Temática</a>
+        <a href="resumen.html">Resumen</a>
+        <a href="personajes.html">Personajes</a>
+        <a href="fuentes.html">Fuentes</a>
+        <a href="adaptaciones.html">Adaptaciones</a>
+        <a href="mas-info.html">Más Info</a>
       </nav>
     </div>
 
