--- a/SEW/P3/libros.html
+++ b/SEW/P3/libros.html
@@ -35,10 +35,15 @@
         <li>Serie Canción de hielo y fuego (A Song of Ice and Fire, desde 1996; 5 obras publicadas de un total de 7). Títulos publicados:</li>
             <ul>
                 <li>Juego de tronos (A Game of Thrones, 1996), publicada por Gigamesh en 2002.</li>
+                <img src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/juego_tronos.jpg" alt="portada Juego de tronos - Saga Juego de tronos" height="200px" width="150px">
                 <li>Choque de reyes (A Clash of Kings, 1998), publicada por Gigamesh en 2003.</li>
+                <img src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/choque_reyes.jpg" alt="portada Choque de Reyes - Saga Juego de tronos" height="200px" width="150px">
                 <li>Tormenta de espadas (A Storm of Swords, 2 vols. 2000), traducciónde Cristina Macía, publicada por Gigamesh en 2005.</li>
+                <img src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/tormenta_espadas.jpg" alt="portada Tormenta de Espadas - Saga Juego de tronos" height="200px" width="150px">
                 <li>Festín de cuervos (A Feast for Crows, 2005), publicada por Gigamesh en 2007.</li>
+                <img src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/festin_cuervos.jpg" alt="portada Festín de Cuervos - Saga Juego de tronos" height="200px" width="150px">
                 <li>Danza de dragones (A Dance with Dragons, 2011), publicada por Gigamesh en 2012.</li>
+                <img src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/danza_dragones.jpg" alt="portada Danza de Dragones - Saga Juego de tronos" height="200px" width="150px">
             </ul>
         <li>Futuros títulos de esta serie serán:
             <ul>
