--- a/SEW/P3/resumen.html
+++ b/SEW/P3/resumen.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML SYSTEM>
 <html lang="es">
 <head>
     <!-- Datos que describen el documento -->
@@ -43,8 +44,8 @@
 
     <p>La "canción de hielo y fuego" se ha mencionado únicamente dos veces en la saga. La primera de ellas, en una visión que tiene Daenerys en Choque de reyes: "Él es el príncipe prometido, y suya es la canción de hielo y fuego", palabras pronunciadas por un Targaryen (probablemente el difunto hermano mayor de Daenerys, Rhaegar Targaryen, sobre su hijo Aegon). Se deduce que hay una conexión entre la canción, la promesa y la misma Daenerys. Esto se ve con más claridad en Festín de cuervos cuando Aemon Targaryen identifica a Daenerys como el "príncipe que fue prometido", aunque no está claro si la profecía del Príncipe que fue Prometido es la misma que la de la Canción de hielo y fuego. La otra ocasión en la que se menciona juntos al hielo y al fuego es en el juramento de lealtad de los hermanos Reed a Brandon Stark en Choque de reyes.</p>
 
-    <video controls>
-          <source src="https://unioviedo-my.sharepoint.com/personal/uo252406_uniovi_es/_layouts/15/guestaccess.aspx?docid=04706cf184ce04485b781282a50c8cc35&authkey=AXIZbj3pCG1iJhxFzEFdwjY&e=5c3d2b02cf5848da8579314613d471fd" type="video/ogg"  height="600" width="600">    
+    <video controls height="400" width="600">
+          <source src="https://github.com/ZenMaster91/uniovi.sew/raw/master/RESOURCES/people.mp4" type="video/mp4">
     </video>
   </body>
   <footer>
