--- a/error-practica.html
+++ b/error-practica.html
@@ -19,11 +19,11 @@
     <!-- Datos con el contenidos que aparece en el navegador -->
     <nav class = "submenu">
       <a class = "cat" href="/~UO236856/SEW/P0/p0.html">P0</a>
-      <a class = "html-cat" href="/~UO236856/SEW/P1/p1.html">P1</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P1/p1.html" target="_blank">P1</a>
       <a class = "xml-cat" href="/~UO236856/error-practica.html">P2</a>
-      <a class = "html-cat" href="/~UO236856/SEW/P3/p3.html">P3</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P3/p3.html" target="_blank">P3</a>
       <a class = "xml-cat" href="/~UO236856/error-practica.html">P4</a>
-      <a class = "html-cat" href="/~UO236856/SEW/P5/p5.html">P5</a>
+      <a class = "html-cat" href="/~UO236856/SEW/P5/p5.html" target="_blank">P5</a>
     </nav>
     <p class="error-title" >404 Práctica no encontrada.</p>
 </body>
