--- a/SEW/P3/adaptaciones.html
+++ b/SEW/P3/adaptaciones.html
@@ -1,156 +1,160 @@
 <!DOCTYPE HTML SYSTEM>
 <html lang="es">
-<head>
-    <!-- Datos que describen el documento -->
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Guillermo Facundo Colunga"/>
-    <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego."/>
-    <meta name="keywords" content="sew, canción, hielo y fuego, practica 3"/>
-    <!-- Just to try if it works-->
-    <meta http-equiv="Refresh" content="300">
 
-    <title>Canción de hielo y fuego</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+<head>
+  <!-- Datos que describen el documento -->
+  <meta charset="UTF-8" />
+  <meta name="author" content="Guillermo Facundo Colunga" />
+  <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego." />
+  <meta name="keywords" content="sew, canción, hielo y fuego, practica 3" />
+  <!-- Just to try if it works-->
+  <meta http-equiv="Refresh" content="300">
+
+  <title>Canción de hielo y fuego</title>
+  <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
-    <header>
-        <h1>Canción de hielo y fuego</h1>
-    </header>
-    <div>
-      <nav>
-        <a href="p3.html">Inicio</a>
-        <a href="libros.html">Libros</a>
-        <a href="tematica.html">Temática</a>
-        <a href="resumen.html">Resumen</a>
-        <a href="personajes.html">Personajes</a>
-        <a href="fuentes.html">Fuentes</a>
-        <a href="adaptaciones.html">Adaptaciones</a>
-        <a href="mas-info.html">Más Info</a>
-      </nav>
-    </div>
-    <h2>Adaptaciones</h2>
+  <!-- Datos con el contenidos que aparece en el navegador -->
+  <header>
+    <h1>Canción de hielo y fuego</h1>
+  </header>
+  <div>
+    <nav>
+      <a href="p3.html">Inicio</a>
+      <a href="libros.html">Libros</a>
+      <a href="tematica.html">Temática</a>
+      <a href="resumen.html">Resumen</a>
+      <a href="personajes.html">Personajes</a>
+      <a href="fuentes.html">Fuentes</a>
+      <a href="adaptaciones.html">Adaptaciones</a>
+      <a href="mas-info.html">Más Info</a>
+    </nav>
+  </div>
+  <h2>Adaptaciones</h2>
 
-    <h3>Televisión</h3>
+  <h3>Televisión</h3>
 
-    <p>La saga Canción de hielo y fuego está siendo adaptada a la pequeña pantalla por parte de los encargados de la serie Juego de Tronos, del canal estadounidense HBO.</p>
+  <p>La saga Canción de hielo y fuego está siendo adaptada a la pequeña pantalla por parte de los encargados de la serie Juego de Tronos, del canal estadounidense HBO.</p>
 
-    <h3>Juegos de rol</h3>
+  <h3>Juegos de rol</h3>
 
-    <p>Dos juegos de rol ambientados en el universo de ficción de Canción de hielo y fuego han sido publicados hasta la fecha:</p>
+  <p>Dos juegos de rol ambientados en el universo de ficción de Canción de hielo y fuego han sido publicados hasta la fecha:</p>
 
-    <ul>
-        <li> A Game of Thrones, un escenario de campaña que usa el sistema d20 como sistema de juego y que fue publicado en inglés en 2005 por la editorial canadiense Guardians of Order. La editorial española Devir Iberia lo tradujo y publicó en 2006 bajo el título Juego de tronos.</li>
-        <li>A Song of Ice and Fire, publicado por primera vez en marzo de 2009 por la editorial estadounidense Green Ronin Publishing. Fue traducido y publicado en castellano el 5 de febrero de 2010 por la editorial sevillana Edge     Entertainment bajo el título Canción de hielo y fuego, el juego de rol de Juego de tronos.</li>
-    </ul>
-
-
-    <h3>Juegos de tablero</h3>
-
-
-    <p>Además de su traducción del juego de rol de Guardians of Order, Devir Iberia comercializó un juego de tablero, también basado en Canción de hielo y fuego.</p>
-
-    <p>Edge Entertaiment también ha publicado en español un juego de cartas llamado Juego de tronos LCG y un juego de tablero llamado Batallas de Poniente.</p>
+  <ul>
+    <li> A Game of Thrones, un escenario de campaña que usa el sistema d20 como sistema de juego y que fue publicado en inglés en 2005 por la editorial canadiense Guardians of Order. La editorial española Devir Iberia lo tradujo y publicó en 2006 bajo el título
+      Juego de tronos.</li>
+    <li>A Song of Ice and Fire, publicado por primera vez en marzo de 2009 por la editorial estadounidense Green Ronin Publishing. Fue traducido y publicado en castellano el 5 de febrero de 2010 por la editorial sevillana Edge Entertainment bajo el título
+      Canción de hielo y fuego, el juego de rol de Juego de tronos.</li>
+  </ul>
 
 
-            <h3>Videojuegos</h3>
+  <h3>Juegos de tablero</h3>
 
-            <table>
-                <tr>
-                    <th>Año</th>
-                    <th>Titulo</th>
-                    <th>Plataformas</th>
-                </tr>
 
-                <tr>
-                    <th>2017</th>
-                    <th>Game of Thrones Seven Kingdoms</th>
-                    <th>PC</th>
-                </tr>
+  <p>Además de su traducción del juego de rol de Guardians of Order, Devir Iberia comercializó un juego de tablero, también basado en Canción de hielo y fuego.</p>
 
-                <tr>
-                    <th>2017</th>
-                    <th>Game of Thrones: A Telltale Game Series Season 2</th>
-                    <th>PC XBOne PS4 PS3 X360 Android iPhone</th>
-                </tr>
+  <p>Edge Entertaiment también ha publicado en español un juego de cartas llamado Juego de tronos LCG y un juego de tablero llamado Batallas de Poniente.</p>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones: Conquest</th>
-                    <th>iPhone Android </th>
-                </tr>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones Season 1</th>
-                    <th>PS3 PS4 X360 XBOne PC</th>
-                </tr>
+  <h3>Videojuegos</h3>
 
-                <tr>
-                    <th>2015</th>
-                    <th> Game of Thrones: A Telltale Games Series</th>
-                    <th>PS4 PS3 XBOne X360 PC</th>
-                </tr>
+  <table>
+    <tr>
+      <th>Año</th>
+      <th>Titulo</th>
+      <th>Plataformas</th>
+    </tr>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones: A Telltale Games Series - Episode 5</th>
-                    <th>XBOne X360 PS4 PS3 PC</th>
-                </tr>
+    <tr>
+      <th>2017</th>
+      <th>Game of Thrones Seven Kingdoms</th>
+      <th>PC</th>
+    </tr>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones: A Telltale Games Series - Episode 4</th>
-                    <th> PS4 PS3 XBOne X360 PC </th>
-                </tr>
+    <tr>
+      <th>2017</th>
+      <th>Game of Thrones: A Telltale Game Series Season 2</th>
+      <th>PC XBOne PS4 PS3 X360 Android iPhone</th>
+    </tr>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones: A Telltale Games Series - Episode 3</th>
-                    <th>XBOne X360 PS3 PS4 PC</th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones: Conquest</th>
+      <th>iPhone Android </th>
+    </tr>
 
-                <tr>
-                    <th>2015</th>
-                    <th>Game of Thrones: A Telltale Games Series - Episode 2: The Lost Lords</th>
-                    <th>iPhone Android XBOne X360 PS4 PS3 PC</th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones Season 1</th>
+      <th>PS3 PS4 X360 XBOne PC</th>
+    </tr>
 
-                <tr>
-                    <th>2014</th>
-                    <th> Game of Thrones: A Telltale Games Series - Episode 1: Iron From Ice</th>
-                    <th>iPhone Android XBOne X360 PS3 PS4 PC </th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th> Game of Thrones: A Telltale Games Series</th>
+      <th>PS4 PS3 XBOne X360 PC</th>
+    </tr>
 
-                <tr>
-                    <th>2013</th>
-                    <th>Game of Thrones Ascent</th>
-                    <th>Android iPhone PC</th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones: A Telltale Games Series - Episode 5</th>
+      <th>XBOne X360 PS4 PS3 PC</th>
+    </tr>
 
-                <tr>
-                    <th>2012</th>
-                    <th>Game of Thrones</th>
-                    <th>Xbox 360 PS3 X360 PC</th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones: A Telltale Games Series - Episode 4</th>
+      <th> PS4 PS3 XBOne X360 PC </th>
+    </tr>
 
-                <tr>
-                    <th>2011</th>
-                    <th>A Game of Thrones: Genesis</th>
-                    <th>PC</th>
-                </tr>
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones: A Telltale Games Series - Episode 3</th>
+      <th>XBOne X360 PS3 PS4 PC</th>
+    </tr>
 
-        </table>
-  </body>
-  <footer>
-    <a href="https://validator.w3.org/check?uri=referer"><img
+    <tr>
+      <th>2015</th>
+      <th>Game of Thrones: A Telltale Games Series - Episode 2: The Lost Lords</th>
+      <th>iPhone Android XBOne X360 PS4 PS3 PC</th>
+    </tr>
+
+    <tr>
+      <th>2014</th>
+      <th> Game of Thrones: A Telltale Games Series - Episode 1: Iron From Ice</th>
+      <th>iPhone Android XBOne X360 PS3 PS4 PC </th>
+    </tr>
+
+    <tr>
+      <th>2013</th>
+      <th>Game of Thrones Ascent</th>
+      <th>Android iPhone PC</th>
+    </tr>
+
+    <tr>
+      <th>2012</th>
+      <th>Game of Thrones</th>
+      <th>Xbox 360 PS3 X360 PC</th>
+    </tr>
+
+    <tr>
+      <th>2011</th>
+      <th>A Game of Thrones: Genesis</th>
+      <th>PC</th>
+    </tr>
+
+  </table>
+</body>
+<footer>
+  <a href="https://validator.w3.org/check?uri=referer"><img
     src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
     alt="HTML5 Válido" title="HTML5 Válido" height="64" width="63" /></a>
 
-    <a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+  <a href=" http://jigsaw.w3.org/css-validator/check/referer ">
     <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
     alt="Valid CSS!" height="31" width="88" /></a>
 
-  </footer>
-  </html>
+</footer>
+
+</html>
