--- a/SEW/P3/p3.html
+++ b/SEW/P3/p3.html
@@ -1,70 +1,78 @@
 <!DOCTYPE HTML SYSTEM>
 <html lang="es">
-<head>
-    <!-- Datos que describen el documento -->
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Guillermo Facundo Colunga"/>
-    <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego."/>
-    <meta name="keywords" content="sew, canción, hielo y fuego, practica 3"/>
-    <!-- Just to try if it works-->
-    <meta http-equiv="Refresh" content="300">
 
-    <title>Canción de hielo y fuego</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+<head>
+  <!-- Datos que describen el documento -->
+  <meta charset="UTF-8" />
+  <meta name="author" content="Guillermo Facundo Colunga" />
+  <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego." />
+  <meta name="keywords" content="sew, canción, hielo y fuego, practica 3" />
+  <!-- Just to try if it works-->
+  <meta http-equiv="Refresh" content="300">
+
+  <title>Canción de hielo y fuego</title>
+  <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
-    <header>
-        <h1>Canción de hielo y fuego</h1>
-    </header>
-    <div>
-      <nav>
-        <a href="p3.html">Inicio</a>
-        <a href="libros.html">Libros</a>
-        <a href="tematica.html">Temática</a>
-        <a href="resumen.html">Resumen</a>
-        <a href="personajes.html">Personajes</a>
-        <a href="fuentes.html">Fuentes</a>
-        <a href="adaptaciones.html">Adaptaciones</a>
-        <a href="mas-info.html">Más Info</a>
-      </nav>
-    </div>
+  <!-- Datos con el contenidos que aparece en el navegador -->
+  <header>
+    <h1>Canción de hielo y fuego</h1>
+  </header>
+  <div>
+    <nav>
+      <a href="p3.html">Inicio</a>
+      <a href="libros.html">Libros</a>
+      <a href="tematica.html">Temática</a>
+      <a href="resumen.html">Resumen</a>
+      <a href="personajes.html">Personajes</a>
+      <a href="fuentes.html">Fuentes</a>
+      <a href="adaptaciones.html">Adaptaciones</a>
+      <a href="mas-info.html">Más Info</a>
+    </nav>
+  </div>
 
-         <p>
-            Es una multipremiada serie de novelas de fantasía épica escritas por el novelista y guionista estadounidense George R. R. Martin. Martin comenzó a escribir la serie en 1993 y el primer tomo se publicó en 1996. Originalmente planeada como una trilogía, actualmente se espera que la serie sea una heptalogía, ya que tiene cinco tomos publicados y dos más planeados. También hay tres novelas cortas que actúan como precuelas de la serie; y una serie de novelas cortas que recopilan los capítulos dedicados a un personaje determinado, ya publicados en las novelas principales. La serie ha sido traducida a más de treinta idiomas y el cuarto tomo alcanzó el primer lugar en la lista de best sellers del New York Times tras su publicación. En septiembre de 2013, la serie había vendido alrededor de 24 millones de copias en todo el mundo.
-        </p>
+  <p>
+    Es una multipremiada serie de novelas de fantasía épica escritas por el novelista y guionista estadounidense George R. R. Martin. Martin comenzó a escribir la serie en 1993 y el primer tomo se publicó en 1996. Originalmente planeada como una trilogía,
+    actualmente se espera que la serie sea una heptalogía, ya que tiene cinco tomos publicados y dos más planeados. También hay tres novelas cortas que actúan como precuelas de la serie; y una serie de novelas cortas que recopilan los capítulos dedicados
+    a un personaje determinado, ya publicados en las novelas principales. La serie ha sido traducida a más de treinta idiomas y el cuarto tomo alcanzó el primer lugar en la lista de best sellers del New York Times tras su publicación. En septiembre de
+    2013, la serie había vendido alrededor de 24 millones de copias en todo el mundo.
+  </p>
 
-         <p>
-            La historia de Canción de hielo y fuego se sitúa en un mundo ficticio medieval, principalmente en un continente llamado Poniente pero también en un vasto continente oriental, conocido como Essos.
-        </p>
+  <p>
+    La historia de Canción de hielo y fuego se sitúa en un mundo ficticio medieval, principalmente en un continente llamado Poniente pero también en un vasto continente oriental, conocido como Essos.
+  </p>
 
-        <p>La mayor parte de los personajes son humanos, pero a medida que la serie avanza aparecen otras razas. </p>
+  <p>La mayor parte de los personajes son humanos, pero a medida que la serie avanza aparecen otras razas. </p>
 
 
-            <p>Hay tres líneas argumentales en la serie:</p>
-        <ul>
-          <li>la crónica de la guerra civil dinástica por el control de Poniente entre varias familias nobles;</li>
-          <li>la creciente amenaza de los Otros y los salvajes, apenas contenida por un inmenso muro de hielo que protege el norte de Poniente;</li>
-          <li>y el viaje de Daenerys Targaryen, la hija exiliada del rey que fue asesinado en otra guerra civil quince años antes del comienzo de la serie, quien busca regresar a Poniente a reclamar sus derechos.</li>
-        </ul>
+  <p>Hay tres líneas argumentales en la serie:</p>
+  <ul>
+    <li>la crónica de la guerra civil dinástica por el control de Poniente entre varias familias nobles;</li>
+    <li>la creciente amenaza de los Otros y los salvajes, apenas contenida por un inmenso muro de hielo que protege el norte de Poniente;</li>
+    <li>y el viaje de Daenerys Targaryen, la hija exiliada del rey que fue asesinado en otra guerra civil quince años antes del comienzo de la serie, quien busca regresar a Poniente a reclamar sus derechos.</li>
+  </ul>
 
-        <p>Estas tres historias interactúan entre sí y son extremadamente codependientes.</p>
-        <p>La serie está narrada en tercera persona a través de los ojos de varios personajes. Al final del quinto tomo, ha habido treinta y un puntos de vista, incluyendo nueve personajes que solo han aparecido una vez (ocho de ellos, porque mueren violentamente).</p>
+  <p>Estas tres historias interactúan entre sí y son extremadamente codependientes.</p>
+  <p>La serie está narrada en tercera persona a través de los ojos de varios personajes. Al final del quinto tomo, ha habido treinta y un puntos de vista, incluyendo nueve personajes que solo han aparecido una vez (ocho de ellos, porque mueren violentamente).</p>
 
-        <p>Si bien la serie se sitúa en un mundo ficticio y Martin ha citado a J. R. R. Tolkien, Jack Vance y a Tad Williams, como sus influencias, la serie difiere de los trabajos de estos autores en el hecho de que se interesa y utiliza más los elementos realistas que los fantásticos. Mientras Tolkien se inspiraba en la mitología, Canción de hielo y fuego se inspira en la historia medieval, especialmente en la Guerra de las Dos Rosas y la dinámica de su primer libro, así como la trama principal, es muy similar a la obra Los reyes malditos del escritor Maurice Druon, sobre la cual Martin ha dicho que es "el verdadero juego de tronos" y que "los Stark y los Lannister no aventajan en nada a los Capetos y los Plantagenet".</p>
+  <p>Si bien la serie se sitúa en un mundo ficticio y Martin ha citado a J. R. R. Tolkien, Jack Vance y a Tad Williams, como sus influencias, la serie difiere de los trabajos de estos autores en el hecho de que se interesa y utiliza más los elementos realistas
+    que los fantásticos. Mientras Tolkien se inspiraba en la mitología, Canción de hielo y fuego se inspira en la historia medieval, especialmente en la Guerra de las Dos Rosas y la dinámica de su primer libro, así como la trama principal, es muy similar
+    a la obra Los reyes malditos del escritor Maurice Druon, sobre la cual Martin ha dicho que es "el verdadero juego de tronos" y que "los Stark y los Lannister no aventajan en nada a los Capetos y los Plantagenet".</p>
 
-        <p >Asimismo, la serie se considera una de las obras más innovadoras del género, debido al gran número y la complejidad de sus personajes, lo intrincado de las tramas políticas, y su falta de censura en temas de violencia, sexo o incluso al abordar tabúes como el incesto.</p>
-        <footer>
-      <a href="https://validator.w3.org/check?uri=referer"><img
+  <p>Asimismo, la serie se considera una de las obras más innovadoras del género, debido al gran número y la complejidad de sus personajes, lo intrincado de las tramas políticas, y su falta de censura en temas de violencia, sexo o incluso al abordar tabúes
+    como el incesto.</p>
+  <footer>
+    <a href="https://validator.w3.org/check?uri=referer"><img
           src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
           alt="HTML5 Válido" title="HTML5 Válido" height="64" width="63" /></a>
 
-        <a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+    <a href=" http://jigsaw.w3.org/css-validator/check/referer ">
        <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
           alt="Valid CSS!" height="31" width="88" /></a>
 
-    </footer>
+  </footer>
 
 </body>
+
 </html>
