--- a/SEW/P3/fuentes.html
+++ b/SEW/P3/fuentes.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML SYSTEM>
+<!DOCTYPE HTML>
 <html lang="es">
 
 <head>
   <!-- Datos que describen el documento -->
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="author" content="Guillermo Facundo Colunga" />
   <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego." />
   <meta name="keywords" content="sew, canción, hielo y fuego, practica 3" />
@@ -41,7 +41,8 @@
     como rey. Durante la lucha dinástica, la heredera original es derrocada y sucedida por su hijo (Aegon III / Enrique II de Inglaterra). Ni la emperatriz Matilde ni Rhaenyra llegaron a gobernar.</p>
 
   <p>Martin es un ávido estudioso de la Europa medieval y ha dicho que la Guerra de las Rosas, junto con muchos otros eventos en Europa durante la Edad Media (como la cruzada albigense), han inspirado la saga. Sin embargo, insiste en que no hay una correspondencia
-    exacta.</p>
+    exacta.
+  </p>
 
   <p>Cabría citar también, a modo de guiño histórico, la similitud de ciertos aspectos geográficos de la saga con algunos de la realidad de la historia medieval y pre-medieval europea, como lo es la semejanza entre el Muro de la novela de Martin, cuyo cometido
     principal es el de defender los siete Reinos de Poniente de posibles ataques por parte de los Otros y de los Salvajes del Norte, y el famoso Muro de Adriano, que pretendía defender la zona britana del Imperio romano de las incursiones de los pictos
