--- a/SEW/P5/p5.html
+++ b/SEW/P5/p5.html
@@ -1,8 +1,9 @@
+<!DOCTYPE HTML>
 <html lang="es">
 
 <head>
   <!-- Datos que describen el documento -->
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <title>Canción de hielo y fuego</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css" />
@@ -49,14 +50,15 @@
 
   <h2>Los libros</h2>
   <ul>
-    <li>Serie Canción de hielo y fuego (A Song of Ice and Fire, desde 1996; 5 obras publicadas de un total de 7). Títulos publicados:</li>
-    <ul>
-      <li>Juego de tronos (A Game of Thrones, 1996), publicada por Gigamesh en 2002.</li>
-      <li>Choque de reyes (A Clash of Kings, 1998), publicada por Gigamesh en 2003.</li>
-      <li>Tormenta de espadas (A Storm of Swords, 2 vols. 2000), traducciónde Cristina Macía, publicada por Gigamesh en 2005.</li>
-      <li>Festín de cuervos (A Feast for Crows, 2005), publicada por Gigamesh en 2007.</li>
-      <li>Danza de dragones (A Dance with Dragons, 2011), publicada por Gigamesh en 2012.</li>
-    </ul>
+    <li>Serie Canción de hielo y fuego (A Song of Ice and Fire, desde 1996; 5 obras publicadas de un total de 7). Títulos publicados:
+      <ul>
+        <li>Juego de tronos (A Game of Thrones, 1996), publicada por Gigamesh en 2002.</li>
+        <li>Choque de reyes (A Clash of Kings, 1998), publicada por Gigamesh en 2003.</li>
+        <li>Tormenta de espadas (A Storm of Swords, 2 vols. 2000), traducciónde Cristina Macía, publicada por Gigamesh en 2005.</li>
+        <li>Festín de cuervos (A Feast for Crows, 2005), publicada por Gigamesh en 2007.</li>
+        <li>Danza de dragones (A Dance with Dragons, 2011), publicada por Gigamesh en 2012.</li>
+      </ul>
+    </li>
     <li>Futuros títulos de esta serie serán:
       <ul>
         <li>Vientos de invierno (The Winds of Winter), sexta obra de la serie, prevista para 2018.</li>
@@ -204,7 +206,8 @@
     como rey. Durante la lucha dinástica, la heredera original es derrocada y sucedida por su hijo (Aegon III / Enrique II de Inglaterra). Ni la emperatriz Matilde ni Rhaenyra llegaron a gobernar.</p>
 
   <p>Martin es un ávido estudioso de la Europa medieval y ha dicho que la Guerra de las Rosas, junto con muchos otros eventos en Europa durante la Edad Media (como la cruzada albigense), han inspirado la saga. Sin embargo, insiste en que no hay una correspondencia
-    exacta.</p>
+    exacta.
+  </p>
 
   <p>Cabría citar también, a modo de guiño histórico, la similitud de ciertos aspectos geográficos de la saga con algunos de la realidad de la historia medieval y pre-medieval europea, como lo es la semejanza entre el Muro de la novela de Martin, cuyo cometido
     principal es el de defender los siete Reinos de Poniente de posibles ataques por parte de los Otros y de los Salvajes del Norte, y el famoso Muro de Adriano, que pretendía defender la zona britana del Imperio romano de las incursiones de los pictos
