--- a/error-practica.html
+++ b/error-practica.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="es">
 
 <head>
   <!-- Datos que describen el documento -->
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>GFC: Prácticas</title>
   <link rel="stylesheet" type="text/css" href="estilo.css" />
   <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css" />
