--- a/SEW/P0/p0.html
+++ b/SEW/P0/p0.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML>
 <html lang="es">
 <link rel="stylesheet" type="text/css" href="estilo.css" />
 
 <head>
   <!-- Datos que describen el documento -->
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Comenzando</title>
 </head>
 
