--- a/SEW/P3/personajes.html
+++ b/SEW/P3/personajes.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML SYSTEM>
+<!DOCTYPE HTML>
 <html lang="es">
 
 <head>
   <!-- Datos que describen el documento -->
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="author" content="Guillermo Facundo Colunga" />
   <meta name="description" content="Página web dedicada a la tercera prátcia 3 de la asignatura de SEW, y va sobre la canción de hielo y fuego." />
   <meta name="keywords" content="sew, canción, hielo y fuego, practica 3" />
