--- a/error-practica.html
+++ b/error-practica.html
@@ -13,13 +13,13 @@
   <header>
     <nav>
       <a href="/~UO236856">Inicio</a>
-      <a href="/~UO236856/aficiones.html">Aficiones</a>
-      <a class="current" href="/~UO236856/practicas.html">Prácticas</a>
+      <a href="aficiones.html">Aficiones</a>
+      <a class="current" href="practicas.html">Prácticas</a>
     </nav>
   </header>
   <!-- Datos con el contenidos que aparece en el navegador -->
   <nav class="submenu">
-    <a class="cat" href="/~UO236856/SEW/P0/p0.html">P0</a>
+    <a class="cat" href="/~UO236856/SEW/P0/p0.html" target="_blank">P0</a>
     <a class="html-cat" href="/~UO236856/SEW/P1/p1.html" target="_blank">P1</a>
     <a class="xml-cat" href="/~UO236856/error-practica.html">P2</a>
     <a class="html-cat" href="/~UO236856/SEW/P3/p3.html" target="_blank">P3</a>
