--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <nav>
       <a class="current" href="/~UO236856">Inicio</a>
-      <a href="/~UO236856/aficiones.html">Aficiones</a>
-      <a href="/~UO236856/practicas.html">Prácticas</a>
+      <a href="aficiones.html">Aficiones</a>
+      <a href="practicas.html">Prácticas</a>
     </nav>
   </header>
   <!-- Datos con el contenidos que aparece en el navegador -->
