Finished until P6-E6. Still working on the game...

--- a/SEW/P6/Ejercicio3/CalculadoraBasica.html
+++ b/SEW/P6/Ejercicio3/CalculadoraBasica.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="calculator.css" />
+<link rel="stylesheet" type="text/css" href="CalculadoraBasica.css" />
 <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css" />
-<script src="calculator.js"></script>
+<script src="CalculadoraBasica.js"></script>
 
 <head>
   <title>Calculadora</title>
