--- a/SEW/P6/Ejercicio4/CalculadoraCientifica.html
+++ b/SEW/P6/Ejercicio4/CalculadoraCientifica.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="scientificcalculator.css" />
+<link rel="stylesheet" type="text/css" href="CalculadoraCientifica.css" />
 <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css" />
-<script src="scientificCalculator.js"></script>
+<script src="CalculadoraCientifica.js"></script>
 
 <head>
   <title>Calculadora</title>
 </head>
 
 <body>
+  <h1>Calculadora Cientifica</h1>
   <form name="sci-calc">
     <input id="display" class="viewer" name="display" value="0" size="28" maxlength="25" />
     <table class="calculator">
