--- a/SEW/P7/Ejercicio3/ejercicio3.html
+++ b/SEW/P7/Ejercicio3/ejercicio3.html
@@ -3,27 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>jQuery-JSON-meteo</title>
+  <title>P7 - Ejercicio 3</title>
+  <link rel="stylesheet" type="text/css" href="Ejercicio3.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <style>
-    footer {
-      margin-top: 2em;
-    }
-
-    footer a img {
-      height: 31px;
-      width: 88px;
-    }
-  </style>
   <script src="ejercicio3.js"></script>
 </head>
 
 <body>
-  <h1>jQuery: Ejemplo de carga de datos JSON de una estación meteorológica de Oviedo usando <a href="http://openweathermap.org/">OpenWeatherMap</a></h1>
-  <button id="cargarJSON" onclick="meteo.cargarDatos()">Obtener JSON</button>
-  <footer>
-    <a href="http://validator.w3.org/check/referer" hreflang="en-us"> <img src="valid-html5-button.png" alt="¡HTML5 válido!"/></a>
-  </footer>
+  <h1>P7 - Ejercicio 3</h1>
+  <p></p>
 </body>
 
 </html>
