--- a/SEW/P7/Ejercicio4/Ejercicio4.html
+++ b/SEW/P7/Ejercicio4/Ejercicio4.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>P7 - Ejercicio 4</title>
   <link rel="stylesheet" type="text/css" href="https://s3-eu-west-1.amazonaws.com/cssfonts/SF/sf-font.css" />
-  <link rel="stylesheet" href="Ejercicio4.css" />
+  <link rel="stylesheet" type="text/css" href="Ejercicio4.css" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNXZpfe5ZYsVE_Z1105zwVRQUUPvmuFvc"></script>
   <script src="Ejercicio4.js"></script>
 </head>
