--- a/SEW/P6/Ejercicio5/encuesta.html
+++ b/SEW/P6/Ejercicio5/encuesta.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Encuesta sobre la calculadora</h1>
-  <form name="formulario" action="mailto:suNombre@SuDireccion.com" method="post" onsubmit="e.validate();">
+  <form name="formulario" onsubmit="e.validate();">
 
     <!-- CAMPO EN EL QUE INTRODUCES EL NOMBRE -->
     <label class="form-label">Nombre:</label><br />
